# ansible-yandex-cloud-inventory

./: .gitignore  MANIFEST.in  README.md  ansible.cfg  pyproject.toml  requirements.txt  setup.py
examples/: inventory.yml
inventory_plugins/: __init__.py  yandex_cloud_inventory.py
