[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ansible-yandex-cloud-inventory"
version = "1.0.0"
description = "Ansible dynamic inventory plugin for Yandex Cloud"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Maksim Zatolokin", email = "max.zatol@gmail.com"}
]
maintainers = [
    {name = "Maksim Zatolokin", email = "max.zatol@gmail.com"}
]
keywords = ["ansible", "inventory", "yandex", "cloud", "dynamic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "ansible>=2.18.6",
    "yandexcloud>=0.99.0",
]

[project.urls]
Homepage = "https://github.com/mzatolokine/ansible-yandex-cloud-inventory"
Documentation = "https://github.com/mzatolokin/ansible-yandex-cloud-inventory#readme"
Repository = "https://github.com/mzatolokin/ansible-yandex-cloud-inventory.git"
Issues = "https://github.com/mzatolokin/ansible-yandex-cloud-inventory/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
# No scripts needed for this package

[tool.setuptools.packages.find]
where = ["."]
include = ["inventory_plugins*"]

[tool.setuptools.package-data]
"inventory_plugins" = ["*.py"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''


[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "yandexcloud.*",
    "yandex.cloud.*",
]
ignore_missing_imports = true 

[project.entry-points."ansible.plugins.inventory"]
yandex_cloud_inventory = "inventory_plugins.yandex_cloud_inventory"